--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,16 +19,18 @@ header {
   align-items: center;
   justify-content: space-around;
   height: 100vh;
+  width: 100%;
 }
 .buscador-container {
   margin: 30px;
   height: 10%;
 }
 .pantalla-container {
+  padding: 50px;
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
-  gap: 30px;
 }
 
 .movie-card {
@@ -37,6 +39,9 @@ header {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 40px rgba(0, 0, 0, 0.9);
+}
+.movie-card:hover {
+  background-color: rgba(240, 255, 255);
 }
 
 .movie-card img {
@@ -51,13 +56,75 @@ header {
   margin-bottom: 5px;
 }
 
-.movie-card p {
-  font-size: 15px;
-  margin-bottom: 5px;
-}
-
-.boton{
+.boton {
   margin: 0;
   padding: 20px;
   background-color: rgba(240, 255, 255, 0.3);
+}
+.datos-container {
+  padding: 5px;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  justify-content: space-around;
+}
+.datos-container > p {
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.individual-container {
+  display: flex;
+  align-items: flex-start;
+  margin: 200px auto;
+  flex-direction: row;
+  background-color: aquamarine;
+  height: 90vh;
+  justify-content: space-between;
+  text-align: center;
+  width: 100vh;
+  background-color: rgba(240, 255, 255, 0.3);
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 40px rgba(0, 0, 0, 0.9);
+}
+.card-container {
+  height: 100%;
+  text-align: center;
+  width: 50%;
+  padding: 20px;
+  border-radius: 10px;
+  border: solid rgba(240, 255, 255, 0.1);
+  margin-right: 10px;
+}
+
+.card-container img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.card-container h2 {
+  text-align: center;
+  font-size: 25px;
+  margin-top: 20px;
+}
+.card2-container {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  align-items: flex-end;
+  justify-content: space-between
+}
+.overview-container {
+  text-align: center;
+  width: 100%;
+  padding: 20px;
+  border-radius: 10px;
+  border: solid rgba(240, 255, 255, 0.1);
+}
+
+.btn-secondary {
+  color: rgba(0, 0, 0, 0.724);
 }
